<resources>
    <string name="app_name">DigitalBit Security</string>
    <string name="items">Items</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="email_username">email/username</string>
    <string name="password">password</string>
    <string name="generate_password">Generate a Password</string>
    <string name="notes">Notes</string>
    <string name="tags">Tags</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="edit_item">Edit Item</string>
    <string name="edit_thumbnail">Edit Thumbnail</string>
    <string name="url">Url</string>
    <string name="submit">Submit</string>
    <string name="edit_tag">Edit Tag</string>
    <string name="name">Name</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="search_by">Search by name or tag</string>
    <string name="choose_category">Choose Category</string>
    <string name="create_category">Create Category</string>
    <string name="update_item">Update Item</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="overview">Item Overview</string>
    <string name="copied">Copied to clipboard</string>
    <string name="field_name">Field Name</string>
    <string name="password_type">Password Type</string>
    <string name="type_">Type :</string>
    <string name="visible_">Visible:</string>
    <string name="name_">Name :</string>
    <string name="category_name">Category name</string>
    <string name="fields">Fields</string>
    <string name="password_required_on_overview">Password Required:&#160;</string>
    <string name="choose_type">Choose Type</string>
    <string name="categories">Categories</string>
    <string name="settings">Settings</string>
    <string name="show_favorites">Show only favorites</string>
    <string name="date_modified">Last date modified</string>
    <string name="filters">Filters</string>
    <string name="sort_by">Sort by</string>
    <string name="items_settings">Items settings</string>
    <string name="apply">Apply</string>
    <string name="thumbnail_already_used">This thumbnail is used by other items</string>
    <string name="remove_item_confirmation">Do you want to remove this item?</string>
    <string name="remove_item_description">By deleting an item there is no way to recover it.</string>
    <string name="remove_category_confirmation">Do you want to remove this category?</string>
    <string name="remove_category_description">By deleting a category all associated items gonna be deleted.</string>
    <string name="yes_remove">Yes, remove</string>
    <string name="keep">Keep it</string>
    <string name="form_validation_error">Form Validation Error</string>
    <string name="ok">OK</string>
    <string name="search_category_icon">Search Category Icon</string>
    <string name="type">Type</string>
    <string name="search_category_icon_hint">Example: Netflix, Twitch, Discord etc.</string>
    <string name="import_backup">Import Backup</string>
    <string name="export_backup">Export Backup</string>
    <string name="backup_exported">Backup exported at: %s</string>
    <string name="backup_imported">Backup imported successfully!</string>
    <string name="unsuccessful_import">Unsuccessful import</string>
    <string name="enable_dark_theme">Enable Dark Theme:&#160;</string>
    <string name="set_up_password">Set up master password</string>
    <string name="please_create">Please create a secure password including the following criteria below.</string>
    <string name="capital_letters">3 capital letters</string>
    <string name="lowercase_letters">1 lowercase letter</string>
    <string name="digits">2 digits</string>
    <string name="special_characters">3 special characters</string>
    <string name="no_whitespace">No whitespace</string>
    <string name="password_length">Length greater than 8</string>
    <string name="register">Register</string>
    <string name="enter_your_password">Please re-enter your master password to continue.</string>
    <string name="wrong_password">Wrong password</string>
    <string name="no_items">No item to display</string>
    <string name="export">Export</string>
    <string name="import_">Import</string>
    <string name="backup_encryption_key">Backup Encryption Key</string>
    <string name="master_password">Master Password</string>
</resources>