<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPopupBackground"
    android:paddingTop="20dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    tools:context=".ui.home.items.SettingsBottomFragment">

    <TextView
        android:id="@+id/headline_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/dismiss_btn"
        app:layout_constraintBottom_toBottomOf="@id/dismiss_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:text="@string/items_settings"
        style="@style/Widget.App.TextView.Headline2"/>

    <Button
        android:id="@+id/dismiss_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:icon="@drawable/ic_baseline_clear_24"
        app:iconTint="@color/white"
        app:backgroundTint="@android:color/transparent"
        style="@style/Widget.App.Button.OutlinedButton.IconOnly.Regular"/>

    <TextView
        android:id="@+id/favorites_checkbox_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/headline_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/filters"
        android:padding="7dp"
        style="@style/Widget.App.TextView.Headline4"/>

    <CheckBox
        android:id="@+id/favorites_checkbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/favorites_checkbox_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/show_favorites"
        tools:checked="true"/>

    <TextView
        android:id="@+id/filter_headline_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/favorites_checkbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/sort_by"
        android:padding="7dp"
        style="@style/Widget.App.TextView.Headline4"/>

    <RadioGroup
        android:id="@+id/filter_radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/filter_headline_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/name_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"/>

        <RadioButton
            android:id="@+id/date_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_modified"
            tools:checked="true"/>

    </RadioGroup>

    <Button
        android:id="@+id/apply_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/filter_radio_group"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/apply"/>

</androidx.constraintlayout.widget.ConstraintLayout>