<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="25dp"
    android:background="@color/discordGray">

    <TextView
        android:id="@+id/headline_field"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/remove_item_confirmation"
        style="@style/Widget.App.TextView.Headline2"/>

    <TextView
        android:id="@+id/description_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/headline_field"
        app:layout_constraintStart_toStartOf="@id/headline_field"
        app:layout_constraintEnd_toEndOf="@id/headline_field"
        android:text="@string/remove_item_description"
        style="@style/Widget.App.Dialog.TextView" />

    <Button
        android:id="@+id/trailing_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/description_field"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/headline_field"
        app:icon="@drawable/ic_baseline_delete_24"
        app:iconTint="@android:color/white"
        android:text="@string/delete"
        android:backgroundTint="@color/red" />

    <Button
        android:id="@+id/leading_btn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toTopOf="@id/trailing_btn"
        app:layout_constraintBottom_toBottomOf="@id/trailing_btn"
        app:layout_constraintEnd_toStartOf="@id/trailing_btn"
        android:backgroundTint="@color/lightGray"
        android:text="@string/keep"/>

</androidx.constraintlayout.widget.ConstraintLayout>