<?xml version="1.0" encoding="utf-8"?>
<com.zeustech.zeuskit.ui.views.FocusableConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/top_line"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/ViewLineStyle" />

    <TextView
        android:id="@+id/field_headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.20"
        app:layout_constraintTop_toTopOf="@id/content_field"
        app:layout_constraintBottom_toBottomOf="@id/content_field"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/name_"
        style="@style/Widget.App.TextView.12sp"/>

    <EditText
        android:id="@+id/content_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/top_line"
        app:layout_constraintStart_toEndOf="@id/field_headline"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/field_name"
        android:inputType="text"
        style="@style/Widget.App.EditText"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/spinner_headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/spinner_view"
        app:layout_constraintBottom_toBottomOf="@id/spinner_view"
        app:layout_constraintStart_toStartOf="@id/field_headline"
        app:layout_constraintEnd_toEndOf="@id/field_headline"
        android:text="@string/type_"
        style="@style/Widget.App.TextView.12sp"/>

    <com.zeustech.zeuskit.ui.autocomplete.InstantAutoComplete
        android:id="@+id/spinner_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
        app:layout_constraintTop_toBottomOf="@id/content_field"
        app:layout_constraintStart_toEndOf="@id/spinner_headline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:hint="@string/choose_type"
        style="@style/Widget.App.EditText"/>

</com.zeustech.zeuskit.ui.views.FocusableConstraintLayout>