<?xml version="1.0" encoding="utf-8"?>
<com.zeustech.zeuskit.ui.views.FocusableConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@color/colorPopupBackground"
    android:animateLayoutChanges="true"
    tools:context=".ui.content.home.settings.BackupBottomFragment">

    <TextView
        android:id="@+id/header_headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.App.TextView.Headline2"
        tools:text="@string/export_backup"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/master_password_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/header_headline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/master_password_headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/master_password_field"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/master_password"
            style="@style/Widget.App.TextView" />

        <EditText
            android:id="@+id/master_password_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/master_password_headline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="textPassword"
            style="@style/Widget.App.EditText.Padding"
            tools:ignore="Autofill,LabelFor" />

        <ImageView
            android:id="@+id/clear_master_password_btn"
            app:layout_constraintEnd_toEndOf="@id/master_password_field"
            app:layout_constraintTop_toTopOf="@id/master_password_field"
            android:src="@drawable/ic_outline_visibility_24"
            style="@style/EditText.Drawable"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/wrong_master_password_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/master_password_container"
        app:layout_constraintEnd_toEndOf="@id/master_password_container"
        android:text="@string/wrong_password"
        android:textColor="@color/red"
        style="@style/Widget.App.TextView"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/encryption_key_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/wrong_master_password_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/encryption_key_headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/encryption_key_field"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/backup_encryption_key"
            style="@style/Widget.App.TextView" />

        <EditText
            android:id="@+id/encryption_key_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/encryption_key_headline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="textPassword"
            style="@style/Widget.App.EditText.Padding"
            tools:ignore="Autofill,LabelFor" />

        <ImageView
            android:id="@+id/clear_encryption_key_btn"
            app:layout_constraintEnd_toEndOf="@id/encryption_key_field"
            app:layout_constraintTop_toTopOf="@id/encryption_key_field"
            android:src="@drawable/ic_outline_visibility_24"
            style="@style/EditText.Drawable"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/encryption_key_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/encryption_key_container"
        tools:text="@string/export" />

</com.zeustech.zeuskit.ui.views.FocusableConstraintLayout>