<?xml version="1.0" encoding="utf-8"?>
<com.zeustech.zeuskit.ui.views.FocusableConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/top_line"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/ViewLine" />

    <TextView
        android:id="@+id/field_headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.20"
        app:layout_constraintTop_toTopOf="@id/content_field"
        app:layout_constraintBottom_toBottomOf="@id/content_field"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/name_"
        style="@style/Widget.App.TextView"/>

    <EditText
        android:id="@+id/content_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/top_line"
        app:layout_constraintStart_toEndOf="@id/field_headline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        android:hint="@string/field_name"
        android:inputType="text"
        style="@style/Widget.App.EditText.Padding"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/spinner_headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/spinner_view"
        app:layout_constraintBottom_toBottomOf="@id/spinner_view"
        app:layout_constraintStart_toStartOf="@id/field_headline"
        app:layout_constraintEnd_toEndOf="@id/field_headline"
        android:text="@string/type_"
        style="@style/Widget.App.TextView"/>

    <Spinner
        android:id="@+id/spinner_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/content_field"
        app:layout_constraintStart_toEndOf="@id/spinner_headline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0" />

    <TextView
        android:id="@+id/switch_headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/visibility_switch"
        app:layout_constraintBottom_toBottomOf="@id/visibility_switch"
        app:layout_constraintStart_toStartOf="@id/field_headline"
        app:layout_constraintEnd_toEndOf="@id/field_headline"
        android:text="@string/visible_"
        style="@style/Widget.App.TextView"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/visibility_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/spinner_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/switch_headline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0" />

</com.zeustech.zeuskit.ui.views.FocusableConstraintLayout>

    <!--    <com.zeustech.zeuskit.ui.autocomplete.InstantAutoComplete
            android:id="@+id/type_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/content_field"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/type"
            style="@style/Widget.App.EditText.20p"
            android:inputType="none" />-->

    <!--    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/field_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/content_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>-->