<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:fillViewport="true"
    tools:context=".ui.register.RegisterFragment">

    <com.nativeboys.uikit.views.FocusableConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground">

        <TextView
            android:id="@+id/headline_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/set_up_password"
            style="@style/Widget.App.TextView.Headline"/>

        <TextView
            android:id="@+id/description_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/headline_field"
            app:layout_constraintStart_toStartOf="@id/headline_field"
            app:layout_constraintEnd_toEndOf="@id/headline_field"
            android:text="@string/please_create"
            android:fontFamily="@font/breeze_sans_regular"
            android:textColor="@color/colorText"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/password_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/description_field"
            app:layout_constraintStart_toStartOf="@id/headline_field"
            app:layout_constraintEnd_toEndOf="@id/headline_field"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            style="@style/Widget.App.EditText.Padding"
            tools:ignore="Autofill,LabelFor,TextFields" />

        <ImageView
            android:id="@+id/show_hide_btn"
            app:layout_constraintEnd_toEndOf="@id/password_field"
            app:layout_constraintTop_toTopOf="@id/password_field"
            android:src="@drawable/ic_outline_visibility_24"
            style="@style/EditText.Drawable"
            tools:ignore="ContentDescription" />

        <RelativeLayout
            android:id="@+id/expressions_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/password_field"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/regular_expressions_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:nestedScrollingEnabled="false"/>

        </RelativeLayout>

        <Button
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toBottomOf="@id/expressions_container"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0"
            android:text="@string/register"/>

    </com.nativeboys.uikit.views.FocusableConstraintLayout>

</ScrollView>